[gd_scene load_steps=6 format=3 uid="uid://c3cq8by5h8073"]

[ext_resource type="Script" path="res://input_prompt.gd" id="1_32b08"]
[ext_resource type="Texture2D" uid="uid://1b4si2ytk217" path="res://Assets/Sprite Sheet.png" id="2_48bd1"]

[sub_resource type="Animation" id="Animation_e61t7"]
resource_name = "Default"
length = 0.60001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DropPrompt:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(0, 1), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MapPrompt:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(0, 1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_gf5l6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DropPrompt:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MapPrompt:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r1dcj"]
_data = {
"Default": SubResource("Animation_e61t7"),
"RESET": SubResource("Animation_gf5l6")
}

[node name="InputPrompt" type="Area2D"]
z_index = 5
collision_layer = 0
collision_mask = 8
script = ExtResource("1_32b08")

[node name="DropPrompt" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0)

[node name="Text" type="Sprite2D" parent="DropPrompt"]
position = Vector2(16, 0)
texture = ExtResource("2_48bd1")
offset = Vector2(0.5, 0)
region_enabled = true
region_rect = Rect2(8, 17, 45, 8)

[node name="KeyboardInput" type="Sprite2D" parent="DropPrompt"]
position = Vector2(-13, -1)
texture = ExtResource("2_48bd1")
offset = Vector2(0.5, 0.5)
region_enabled = true
region_rect = Rect2(54, 16, 9, 9)

[node name="ControllerInput" type="Sprite2D" parent="DropPrompt"]
visible = false
position = Vector2(-23, -1)
texture = ExtResource("2_48bd1")
offset = Vector2(0, 0.5)
region_enabled = true
region_rect = Rect2(64, 16, 28, 11)

[node name="MapPrompt" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0)

[node name="Text" type="Sprite2D" parent="MapPrompt"]
position = Vector2(15, 0)
texture = ExtResource("2_48bd1")
region_enabled = true
region_rect = Rect2(8, 33, 42, 8)

[node name="KeyboardInput" type="Sprite2D" parent="MapPrompt"]
position = Vector2(-13, -1)
texture = ExtResource("2_48bd1")
offset = Vector2(0.5, 0.5)
region_enabled = true
region_rect = Rect2(51, 32, 9, 9)

[node name="ControllerInput" type="Sprite2D" parent="MapPrompt"]
visible = false
position = Vector2(-15, -1)
texture = ExtResource("2_48bd1")
offset = Vector2(0.5, 0.5)
region_enabled = true
region_rect = Rect2(61, 32, 13, 9)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r1dcj")
}
autoplay = "Default"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
